# music-hub

./: .gitignore  AGENTS.md  CHANGELOG.md  COMMANDS.md  README.md  install-m-cli.ps1  install.ps1  m.cmd  m.ps1  pyproject.toml
docs/plans/: 2026-02-26-github-release-design.md  2026-02-26-github-release-impl.md  2026-02-26-multi-instance-layer.md
docs/releases/: 2026-03-06-release-draft.md
mpv-scripts/: musichub.lua
musichub/: backup.py  cli.py  config.py  daemon.py  db.py  events_ingest.py  importers.py  models.py  mpv_control.py  mpv_ipc.py  nl.py  playback_prefs.py  recommender.py  schema.sql  slots.py
tests/: test_backup.py  test_cli_snapshot.py  test_cmd_af.py  test_cmd_layer.py  test_cmd_next.py  test_cmd_play_replace.py  test_cmd_slots.py  test_cmd_stop.py  test_cmd_vol.py  test_db_sessions.py  test_db_undo.py  test_mpv_control.py  test_nl_new_cmds.py  test_radio.py  test_slots.py
